--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "An experiment",
   "main": "index.js",
   "scripts": {
+    "start": "npm run server",
+    "server": "node app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/joshgillies/bc-webplayer/issues"
   },
-  "homepage": "https://github.com/joshgillies/bc-webplayer"
+  "homepage": "https://github.com/joshgillies/bc-webplayer",
+  "dependencies": {
+    "jade-stream": "^0.1.2",
+    "st": "^0.5.2"
+  }
 }
