--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch-jade": "jade --watch --pretty app/templates/index.jade --out app/static",
     "build": "npm run build-jade & npm run build-css",
     "build-css": "cssnext --compress app/styles/app.css app/static/app.css",
-    "build-jade": "jade app/tempaltes/index.css --out app/static"
+    "build-jade": "jade app/templates/index.jade --out app/static"
   },
   "repository": {
     "type": "git",
