Update media player

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "prestart": "npm run build",
     "start": "node app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npm run watch-jade & npm run watch-css & node app/server.js",
+    "watch": "npm run watch-jade & npm run watch-css & npm run watch-js & node app/server.js",
     "watch-css": "cssnext --watch app/styles/app.css app/static/app.css",
+    "watch-js": "watchify app/browser.js -o app/static/app.js",
     "watch-jade": "jade --watch --pretty app/templates/index.jade --out app/static",
     "build": "npm run build-jade & npm run build-css",
     "build-css": "cssnext --compress app/styles/app.css app/static/app.css",
@@ -33,7 +34,9 @@
   "homepage": "https://github.com/joshgillies/bc-webplayer",
   "dependencies": {
     "cssnext": "^0.6.6",
+    "global": "^4.3.0",
     "jade": "^1.9.1",
+    "mercury": "^14.0.0",
     "normalize.css": "^3.0.2",
     "rc": "^0.5.5",
     "st": "^0.5.2",
